# ai_gaming_assistant

./: .gitignore  LICENSE  README.md  pyproject.toml
data/raw/hollow_knight/: charms.txt
src/rpgagents/: crew.py  main.py
src/rpgagents/config/: agents.yaml  tasks.yaml
src/rpgagents/tools/: __init__.py  game_search_tool.py  web_search_tool.py
tests/: full_system_validation.py
